Fix images' alignment within pushbutton control, add flex classes
Bug
- pushbuttons with images get misaligned. Namely the inner image that
it's position well. Visible in some places within the sidebar
impress, calc:
https://archive.org/download/bug-pushbutton-with-img-alignments/bug-pushbutton-with-img-alignments.png

Fix
- Pushbuttons with images are now classified with .has-img and inherit
the respective global flexbox CSS classes.
  - Add global flex box CSS classes so we can avoid code duplication
- Also make sure other pushbuttons with image don't butchered with this
change (e.g. calc > pivot table dialog)

--- a/browser/css/cool.css
+++ b/browser/css/cool.css
@@ -14,6 +14,31 @@
 	/* Shared color for cell and selection border */
 	--cell-cursor-selection-border-color: var(--color-primary);
 }
+
+/* Flexbox */
+.d-flex {
+	display: flex;
+}
+.flex-column {
+	/* Initial value */
+	flex-direction: column;
+}
+.flex-row {
+	flex-direction: row;
+}
+.align-items-center {
+	align-items: center;
+}
+.justify-items-center {
+	justify-items: center;
+}
+.align-content-center {
+	align-content: center;
+}
+.justify-content-center {
+	justify-content: center;
+}
+
 /* clip technique: hide visually but keep it available to screen readers */
 .visuallyhidden {
 	border: 0;
